# robot_nav_system

./: README.md  detail.md  requirements.txt  setup.py
data/: semantic_map.json
robot_nav_system/: CMakeLists.txt  package.xml  setup.py
robot_nav_system/config/dmros/: real_robot.yaml  turtlebot3_sim.yaml
robot_nav_system/config/profiles/: manual_sim.json  real_robot.json  turtlebot3_sim.json
robot_nav_system/launch/bringup/: gazebo_world.launch
robot_nav_system/launch/exploration/: explore.launch  multi_explore.launch
robot_nav_system/launch/navigation/: move_base.launch  multi_move_base.launch
robot_nav_system/launch/perception/: dmros.launch  multi_dmros.launch
robot_nav_system/launch/slam/: multi_slam.launch  slam.launch
robot_nav_system/launch/system/: full_system.launch  nav_agent_only.launch
robot_nav_system/msg/: SystemState.msg
robot_nav_system/scripts/: dmros_bridge_node.py  system_orchestrator_node.py
robot_nav_system/src/robot_nav_system/: __init__.py  exceptions.py  logging_setup.py
robot_nav_system/src/robot_nav_system/agent/: __init__.py  agent.py  llm_client.py  memory.py  models.py  task_allocator.py  task_manager.py
robot_nav_system/src/robot_nav_system/config/: __init__.py  config.py  defaults.py
robot_nav_system/src/robot_nav_system/core/: __init__.py  mode_controller.py  orchestrator.py  state_machine.py
robot_nav_system/src/robot_nav_system/navigation/: __init__.py  base.py  factory.py  ros_multi.py  ros_single.py  simulated.py
robot_nav_system/srv/: ExecuteTask.srv  GetSystemStatus.srv
(+6 files in other folders)
